--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -813,11 +813,7 @@ fieldset {
 }
 
 .dashboard .progress-bar {
-    position: absolute;
     top: 150px;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
 }
 
 .dashboard .nav {
@@ -1741,6 +1737,7 @@ fieldset {
     background-color: #1C1C24;
     margin-top: 30px;
     border-radius: 10px;
+    transition: 300ms;
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown {
@@ -2153,10 +2150,15 @@ fieldset {
     background-color: #1C6FF2;
 }
 
+.dashboard .main .product-info .info {
+    position: relative;
+}
+
 .dashboard .main .product-info .info .changes {
     background-color: #1C1C24;
     margin-top: 30px;
     border-radius: 10px;
+    transition: 300ms;
 }
 
 .dashboard .main .product-info .info .changes .general {
@@ -2238,6 +2240,8 @@ fieldset {
 
 .dashboard .main .product-info .popular-products {
     width: 30%;
+    transition: 300ms;
+    position: relative;
 }
 
 .dashboard .main .product-info .popular-products h2 {
@@ -3849,13 +3853,14 @@ fieldset {
     opacity: 0;
 }
 
-.admin-panel .progress-bar {
+.progress-bar {
     position: absolute;
     top: 250px;
     right: 0;
     bottom: 0;
     left: 0;
-    margin: auto;
+    margin: 0 auto;
+    z-index: 1;
 }
 
 .admin-panel .header {
@@ -4351,10 +4356,9 @@ fieldset {
     line-height: 16px;
 }
 
-.admin-panel .keys .create-product-key-modal .help-message {
+.admin-panel .help-message {
     line-height: 18px;
     font-size: 15px;
-    text-align: center;
     color: #04BE00;
     transition: 300ms;
     cursor: pointer;
@@ -4540,10 +4544,6 @@ fieldset {
 
 .admin-panel .product-keys .product-keys-wrap {
     transition: 300ms;
-}
-
-.admin-panel .product-keys .progress-bar {
-    top: 0px;
 }
 
 .admin-panel .product-keys .confirm-action {
@@ -4808,7 +4808,6 @@ fieldset {
 }
 
 .admin-panel .promocodes {
-    padding-top: 10px;
     transition: 300ms;
     position: relative;
 }
@@ -4918,6 +4917,7 @@ fieldset {
 
 .admin-panel .promocodes .promocodes-wrap-products {
     transition: 300ms;
+    padding-top: 10px;
 }
 
 .admin-panel .promocodes .create-promo-modal {
@@ -4943,6 +4943,7 @@ fieldset {
 
 .admin-panel .promocodes .create-promo-modal .create-promocode h3 {
     text-align: center;
+    line-height: 36px;
 }
 
 .admin-panel .promocodes .create-promo-modal .create-promocode .field-wrap {
@@ -4987,8 +4988,69 @@ fieldset {
     position: relative;
 }
 
-.admin-panel .view-promocodes .progress-bar {
-    top: 0;
+.admin-panel .view-promocodes .confirm-action-delete-promo {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 400px;
+    transition: 300ms;
+    padding: 20px;
+    background-color: #1C1C24;
+    z-index: 1;
+    border-radius: 10px;
+    transform: translateY(-150%);
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .content {
+    margin-top: 30px;
+    line-height: 24px;
+    letter-spacing: .2px;
+    text-align: center;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons .button {
+    padding: 10px 0;
+    width: 160px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    color: #fff;
+    transition: 300ms;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons .button.agree {
+    background-color: #04BE00;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons .button.agree:hover {
+    opacity: .85;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons .button.refuse {
+    background-color: #FF00006E;
+}
+
+.admin-panel .view-promocodes .confirm-action-delete-promo .buttons .button.refuse:hover {
+    background-color: #92191978;
 }
 
 .admin-panel .view-promocodes .view-promos-wrap {
@@ -4998,7 +5060,18 @@ fieldset {
 
 .admin-panel .view-promocodes .promocodes-wrap {
     display: flex;
-    padding: 0 2vw;
+    padding: 20px 2vw;
+    transition: 300ms;
+}
+
+@media (max-width: 1500px) {
+    .admin-panel .view-promocodes .promocodes-wrap {
+        flex-direction: column;
+    }
+    .admin-panel .view-promocodes .promocodes-wrap .product {
+        max-width: 330px;
+        margin: 200px auto 0;
+    }
 }
 
 .admin-panel .view-promocodes .view-promos-wrap h2 {
@@ -5013,6 +5086,98 @@ fieldset {
     width: 100%;
 }
 
+.admin-panel .view-promocodes .promocodes-wrap .table .heading {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading div {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading .promo-name {
+    width: 245px;
+    padding-left: 20px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading .discount-percent {
+    width: 100px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading .activations-amount {
+    width: 195px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading .is-used {
+    width: 120px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table .heading .action {
+    width: 140px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode:nth-of-type(2n + 1) {
+    background-color: #1C1C24;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode div {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .promo-name {
+    min-width: 245px;
+    width: 245px;
+    word-break: break-all;
+    padding-left: 20px;
+    text-align: center;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .discount-percent {
+    width: 100px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .activations-amount {
+    width: 195px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .is-used {
+    width: 120px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .action {
+    width: 140px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .button {
+    width: 100%;
+    border-radius: 5px;
+    background-color: #FF00006E;
+    color: #fff;
+    height: 27px;
+    border: none;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .promocodes .promocode .button.delete:hover {
+    background-color: #92191978;
+}
+
 .admin-panel .view-promocodes .product {
     display: flex;
     flex-direction: column;
@@ -5024,6 +5189,7 @@ fieldset {
     padding: 170px 20px 20px;
     position: relative;
     margin-top: 170px;
+    margin-left: 30px;
     font-weight: 600;
     font-size: 12px;
     line-height: 18px;
