--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1328,6 +1328,10 @@ fieldset {
     height: 50%;
 }
 
+.dashboard .main .lobby .subscriptions .container {
+    transition: 300ms;
+}
+
 .dashboard .main .lobby .subscriptions .subscription {
     background-color: #1C1C24;
     border-top-left-radius: 10px;
@@ -6108,6 +6112,7 @@ fieldset {
     font-size: 18px;
     line-height: 36px;
     letter-spacing: .1px;
+    position: relative;
 }
 
 .admin-panel .action-logs h2 {
@@ -6122,6 +6127,7 @@ fieldset {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
+    transition: 300ms;
 }
 
 .admin-panel .action-logs .table {
@@ -6167,7 +6173,7 @@ fieldset {
 }
 
 .admin-panel .action-logs .table .heading .action {
-    width: 235px;
+    width: 175px;
 }
 
 .admin-panel .action-logs .table .logs {
@@ -6182,6 +6188,8 @@ fieldset {
 .admin-panel .action-logs .table .logs .log {
     display: flex;
     justify-content: space-between;
+    text-align: center;
+    align-items: center;
 }
 
 .admin-panel .action-logs .table .logs .log div {
@@ -6214,7 +6222,7 @@ fieldset {
 }
 
 .admin-panel .action-logs .table .logs .log .action {
-    width: 235px;
+    width: 175px;
 }
 
 @media (max-width: 1300px) {
