--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -7113,6 +7113,7 @@ fieldset {
 
 .admin-panel .action-logs .search {
     display: flex;
+    transition: 300ms;
 }
 
 .admin-panel .action-logs .search .search-bar.by-actions {
@@ -7147,7 +7148,6 @@ fieldset {
     font-size: 24px;
     line-height: 36px;
     letter-spacing: .1px;
-    margin-top: 10px;
 }
 
 .admin-panel .action-logs .actions-wrap {
